--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 12px;
+    font-size:12px;
     font-family: 'Times New Roman';
 }
 
@@ -9,6 +9,9 @@ tr,
 table {
     border-top: 1px solid black;
     border-collapse: collapse;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 td.description,
@@ -26,8 +29,8 @@ th.quantity {
 
 td.price,
 th.price {
-    width: 40px;
-    max-width: 40px;
+    width: 44px;
+    max-width: 44px;
     word-break: break-all;
 }
 
@@ -36,14 +39,19 @@ th.price {
     align-content: center;
 }
 
-.ticket {
-    width: 155px;
-    max-width: 155px;
-}
-
 img {
     max-width: inherit;
     width: inherit;
+}
+
+.ticket{
+    max-width:100%;
+}
+
+@media screen and (max-width:760px){
+    .ticket{
+        font-size:40px !important;
+    }
 }
 
 @media print {
