--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,14 +25,35 @@
   .button2 {
     background-color: white; 
     color: black; 
-    border: 2px solid #0000A3;
+    border: 2px solid #00D100;
   }
   
   .button2:hover {
-    background-color: #0000A3;
+    background-color: #00D100;
     color: white;
   }
   
    .body{
         background-image: url("https://previews.123rf.com/images/279photo/279photo1612/279photo161205273/68221977-payment-terminal-with-card-on-white-background-top-view-.jpg");
     }
+    
+     .button3 {
+  padding: 6px 9px;
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #04AA6D;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 0px #999;
+}
+
+.button3:hover {background-color: #3e8e41}
+
+.button3:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
