--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,5 @@
+
+
 .button {
     border: none;
     color: white;
@@ -15,7 +17,13 @@
     background-color: white; 
     color: black; 
     border: 2px solid #14f51d;
+    border-radius: 12px;
   }
+  
+  .button1:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
   
   .button1:hover {
     background-color: #14f51d;
@@ -25,16 +33,21 @@
   .button2 {
     background-color: white; 
     color: black; 
-    border: 2px solid #00D100;
+    border: 2px solid #4f02de;
   }
   
+  .button2:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
   .button2:hover {
-    background-color: #00D100;
+    background-color: #689468;
     color: white;
   }
   
-   .body{
-        background-image: url("https://previews.123rf.com/images/279photo/279photo1612/279photo161205273/68221977-payment-terminal-with-card-on-white-background-top-view-.jpg");
+    .body{
+        background-image: url("https://cdn.wallpapersafari.com/47/46/IOFTRN.jpg");
     }
     
      .button3 {
